interpertor/com/fuhao/interperter/vimsemantic/VimScriptParser.java
// Generated from E:/YSI/CodePlatform/interpertor/com/fuhao/interperter/vimsemantic\VimScript.g4 by ANTLR 4.7
package com.fuhao.interperter.vimsemantic;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VimScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, EQUAL=17, 
		LE=18, GE=19, BANG=20, ASSIGN=21, GT=22, LT=23, ADD=24, SUB=25, MUL=26, 
		DIV=27, ADD_ASSIGN=28, SUB_ASSIGN=29, MUL_ASSIGN=30, DIV_ASSIGN=31, MOD_ASSIGN=32, 
		LET=33, UNLET=34, RETURN=35, FUNCTION=36, ENDFUNCTION=37, IF=38, ENDIF=39, 
		ELSE=40, ELSEIF=41, CONTINUE=42, BREAK=43, WHILE=44, ENDWHILE=45, FOR=46, 
		In=47, ENDFOR=48, ECHO=49, CALL=50, FloatLiteral=51, IntegerLiteral=52, 
		StringLiteral=53, IdLiteral=54, WS=55, LINE_COMMENT=56;
	public static final int
		RULE_allStatement = 0, RULE_statements = 1, RULE_for_ = 2, RULE_creationFunction = 3, 
		RULE_let = 4, RULE_unlet = 5, RULE_continue_ = 6, RULE_break_ = 7, RULE_return_ = 8, 
		RULE_expression = 9, RULE_arithmetic = 10, RULE_primary = 11, RULE_echo = 12, 
		RULE_while_ = 13, RULE_ifelse = 14, RULE_else_ = 15, RULE_elseif = 16, 
		RULE_literal = 17, RULE_callFunction = 18, RULE_listLiteral = 19, RULE_dictionaryLiteral = 20, 
		RULE_keyValue = 21;
	public static final String[] ruleNames = {
		"allStatement", "statements", "for_", "creationFunction", "let", "unlet", 
		"continue_", "break_", "return_", "expression", "arithmetic", "primary", 
		"echo", "while_", "ifelse", "else_", "elseif", "literal", "callFunction", 
		"listLiteral", "dictionaryLiteral", "keyValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "'function!'", "'('", "','", "')'", "'^'", "'|'", "'?'", 
		"'%'", "'!='", "'&&'", "'||'", "'['", "']'", "'{'", "'}'", "'=='", "'<='", 
		"'>='", "'!'", "'='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'let'", "'unlet'", "'return'", "'function'", 
		"'endfunction'", "'if'", "'endif'", "'else'", "'elseif'", "'continue'", 
		"'break'", "'while'", "'endwhile'", "'for'", "'in'", "'endfor'", "'echo'", 
		"'call'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "EQUAL", "LE", "GE", "BANG", "ASSIGN", "GT", 
		"LT", "ADD", "SUB", "MUL", "DIV", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
		"DIV_ASSIGN", "MOD_ASSIGN", "LET", "UNLET", "RETURN", "FUNCTION", "ENDFUNCTION", 
		"IF", "ENDIF", "ELSE", "ELSEIF", "CONTINUE", "BREAK", "WHILE", "ENDWHILE", 
		"FOR", "In", "ENDFOR", "ECHO", "CALL", "FloatLiteral", "IntegerLiteral", 
		"StringLiteral", "IdLiteral", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "VimScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VimScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AllStatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(VimScriptParser.EOF, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public AllStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterAllStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitAllStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitAllStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllStatementContext allStatement() throws RecognitionException {
		AllStatementContext _localctx = new AllStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_allStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__12) | (1L << T__14) | (1L << ADD) | (1L << SUB) | (1L << LET) | (1L << UNLET) | (1L << RETURN) | (1L << FUNCTION) | (1L << IF) | (1L << CONTINUE) | (1L << BREAK) | (1L << WHILE) | (1L << FOR) | (1L << ECHO) | (1L << CALL) | (1L << FloatLiteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << IdLiteral))) != 0)) {
				{
				{
				setState(44);
				statements();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public While_Context while_() {
			return getRuleContext(While_Context.class,0);
		}
		public For_Context for_() {
			return getRuleContext(For_Context.class,0);
		}
		public EchoContext echo() {
			return getRuleContext(EchoContext.class,0);
		}
		public Return_Context return_() {
			return getRuleContext(Return_Context.class,0);
		}
		public Break_Context break_() {
			return getRuleContext(Break_Context.class,0);
		}
		public Continue_Context continue_() {
			return getRuleContext(Continue_Context.class,0);
		}
		public UnletContext unlet() {
			return getRuleContext(UnletContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CallFunctionContext callFunction() {
			return getRuleContext(CallFunctionContext.class,0);
		}
		public CreationFunctionContext creationFunction() {
			return getRuleContext(CreationFunctionContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(52);
					match(T__0);
					}
				}

				setState(55);
				let();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(56);
					match(T__0);
					}
				}

				setState(59);
				ifelse();
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(60);
					match(T__0);
					}
				}

				setState(63);
				match(ENDIF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(65);
					match(T__0);
					}
				}

				setState(68);
				while_();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(69);
					match(T__0);
					}
				}

				setState(72);
				match(ENDWHILE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(74);
					match(T__0);
					}
				}

				setState(77);
				for_();
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(78);
					match(T__0);
					}
				}

				setState(81);
				match(ENDFOR);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(83);
					match(T__0);
					}
				}

				setState(86);
				echo();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(87);
					match(T__0);
					}
				}

				setState(90);
				return_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(91);
					match(T__0);
					}
				}

				setState(94);
				break_();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(95);
					match(T__0);
					}
				}

				setState(98);
				continue_();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(99);
					match(T__0);
					}
				}

				setState(102);
				unlet();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(103);
					match(T__0);
					}
				}

				setState(106);
				expression(0);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(107);
					match(T__0);
					}
				}

				setState(110);
				match(CALL);
				setState(111);
				callFunction();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(112);
					match(T__0);
					}
				}

				setState(115);
				creationFunction();
				setState(116);
				match(ENDFUNCTION);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_Context extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public For_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterFor_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitFor_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitFor_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_Context for_() throws RecognitionException {
		For_Context _localctx = new For_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_for_);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(FOR);
			setState(121);
			expression(0);
			setState(122);
			match(In);
			setState(123);
			expression(0);
			setState(125); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(124);
					statements();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(127); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreationFunctionContext extends ParserRuleContext {
		public Token op;
		public List<TerminalNode> IdLiteral() { return getTokens(VimScriptParser.IdLiteral); }
		public TerminalNode IdLiteral(int i) {
			return getToken(VimScriptParser.IdLiteral, i);
		}
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public CreationFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creationFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterCreationFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitCreationFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitCreationFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreationFunctionContext creationFunction() throws RecognitionException {
		CreationFunctionContext _localctx = new CreationFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_creationFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			((CreationFunctionContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==FUNCTION) ) {
				((CreationFunctionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(130);
			match(IdLiteral);
			setState(131);
			match(T__2);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IdLiteral) {
				{
				setState(132);
				match(IdLiteral);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(133);
					match(T__3);
					setState(134);
					match(IdLiteral);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(142);
			match(T__4);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__12) | (1L << T__14) | (1L << ADD) | (1L << SUB) | (1L << LET) | (1L << UNLET) | (1L << RETURN) | (1L << FUNCTION) | (1L << IF) | (1L << CONTINUE) | (1L << BREAK) | (1L << WHILE) | (1L << FOR) | (1L << ECHO) | (1L << CALL) | (1L << FloatLiteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << IdLiteral))) != 0)) {
				{
				{
				setState(143);
				statements();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LetContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterLet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitLet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitLet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetContext let() throws RecognitionException {
		LetContext _localctx = new LetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_let);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(LET);
			setState(150);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnletContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UnletContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unlet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterUnlet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitUnlet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitUnlet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnletContext unlet() throws RecognitionException {
		UnletContext _localctx = new UnletContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_unlet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(UNLET);
			setState(153);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Continue_Context extends ParserRuleContext {
		public Continue_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continue_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterContinue_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitContinue_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitContinue_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Continue_Context continue_() throws RecognitionException {
		Continue_Context _localctx = new Continue_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_continue_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(CONTINUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Break_Context extends ParserRuleContext {
		public Break_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_break_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterBreak_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitBreak_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitBreak_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Break_Context break_() throws RecognitionException {
		Break_Context _localctx = new Break_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_break_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_Context extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Return_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).enterReturn_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof VimScriptListener ) ((VimScriptListener)listener).exitReturn_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof VimScriptVisitor ) return ((VimScriptVisitor<? extends T>)visitor).visitReturn_(this);
			else return visitor.visitChildren(this);
		}
	}
